2010-01-08  Rainer Joswig <joswig@lisp.de>

	* src/lisp/fricas-lisp.lisp: save-core-restart(): Use default
	location of Closure CL kernel.

2010-01-04  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/ssolve.spad.pamphlet: use a stream of distinct
	transcendental elements
	* src/algebra/Makefile.in, src/algebra/Makenotes.tex,
	src/algebra/rec.spad.pamphlet, src/input/Makefile.in: adjust

2009-12-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffcat.spad.pamphlet: Update comments.

2009-12-20  Aleksej Saushev  <asau@inbox.ru>

	* src/hyper/addfile.c: strpostfix(): Simplify, works
	around build problem on NetBSD.

2009-12-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fixed miscompilation of record constructor.
	* src/interp/compiler.boot: simpleCall(): do not
	try to optimize 'mkRecord'.

2009-12-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* rc/interp/int-top.boot: executeInterpreterCommand(): Use
	setCurrentLine instead of ncSetCurrentLine.

2009-12-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/u32vec.spad.pamphlet: mul(): Correct
	test for zero polynomial.

2009-12-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sf.spad.pamphlet, src/interp/primitives.lisp:
	Faster DoubleFloat computations.

2009-12-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Faster polynomial multiplication.
	* src/algebra/poly.spad.pamphlet: Faster polynomial
	multiplication.

2009-12-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/transsolve.spad.pamphlet: testZero?(): Accept
	more solutions.

2009-12-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/vecrec.spad.pamphlet: More scalable
	rational reconstruction.

2009-12-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot, src/interp/i-analy.boot,
	src/interp/buildom.boot, src/interp/i-coerce.boot,
	src/interp/parse.boot, src/interp/i-output.boot,
	src/interp/i-spec2.boot, src/interp/g-cndata.boot,