@@ -110,7 +110,7 @@ check_mode_value() {
 # $2 is the output file name
 compile_lisp_file() {
     case $lisp_flavor in
-	gcl|sbcl|cmucl|clisp|openmcl|ecl)
+	gcl|sbcl|cmucl|clisp|openmcl|ecl|lispworks)
 	   if [ -z "$output" ] ; then 
 	       # $command $quiet $eval_flags \
 	       echo "(in-package \"FRICAS-LISP\")" \
@@ -132,7 +132,7 @@ compile_lisp_file() {
 # Build an executable out of (compiled) Lisp files.
 make_program() {
     case $lisp_flavor in
-	gcl|sbcl|cmucl|clisp|openmcl|ecl)
+	gcl|sbcl|cmucl|clisp|openmcl|ecl|lispworks)
            ## $command $eval_flags \
 	   echo "(in-package \"FRICAS-LISP\") \
 	         (make-program \"$output\" (quote ($*)))" | $command
@@ -149,7 +149,7 @@ make_program() {
 # $3 is a temporary file where we dump compiler diagnostics
 translate_boot_file() {
     case $lisp_flavor in
-	gcl|sbcl|cmucl|clisp|openmcl|ecl)
+	gcl|sbcl|cmucl|clisp|openmcl|ecl|lispworks)
 	   if [ -z "$output" ] ; then
 	      o_arg=nil
 	   else
